# gen_finger_con_cplus_sdk_release

./: CMakeLists.txt  README.md  README_CN.md  camera_cmd.sh  start_finger.cpp
docs/: usb-setup.md  usb-setup_CN.md
include/: camera.hpp  das_protocol.hpp  databus.hpp  finger_system.hpp  pack.hpp  tactile_processing.hpp
src/: camera.cpp  camera_cmd.cpp  das_protocol.cpp  databus.cpp  finger_system.cpp  pack.cpp  tactile_processing.cpp
tests/: finger_sdk_tests.cpp
